--- a/index.html
+++ b/index.html
@@ -4,47 +4,76 @@
         <link rel="stylesheet" href="index.css">
         <meta charset="UTF-8">
         <title>Burton.html</title>
-        <h1> Javascript</h1>
     </head>
 </header>
 <body>
 
+<h1> Javascript</h1>
 <section>
+    <div class="Lmao">
     <h3> H01</h3>
     <a href="h01/index1.html">
         <button>
-            H01 opdracht1.1
+            H01 opdracht 1.1
         </button>
     </a><br>
     <a href="h01/index2.html">
         <button>
-            H01 opdracht1.2
+            H01 opdracht 1.2
         </button>
     </a><br>
     <a href="h01/index3.html">
         <button>
-            H01 opdracht1.3
+            H01 opdracht 1.3
         </button>
     </a>
     <h3> H02</h3>
     <a href="h02/index2.1.html">
         <button>
-            H02 opdracht2.1
+            H02 opdracht 2.1
         </button>
         <br>
     </a>
     <a href="h02/index2.2.html">
         <button>
-            H02 opdracht2.2
+            H02 opdracht 2.2
         </button>
     </a>
     <h3> H03</h3>
     <a href="h03/index3.1.html">
         <button>
-            H03 opdracht3.1
+            H03 opdracht 3.1
         </button>
         <br>
     </a>
+    <h3> H04</h3>
+    <a href="h04/index4.1.html">
+        <button>
+            H04 opdracht 4.1
+        </button>
+        <br>
+    </a>
+    <a href="h04/index4.2.html">
+        <button>
+            H04 opdracht 4.2
+        </button>
+        <br>
+    </a>
+    <a href="h04/index4.3.html">
+        <button>
+            H04 opdracht 4.3
+        </button>
+        <br>
+    </a>
+    <h3> H05</h3>
+    <a href="h05/index5.1.html">
+        <button>
+            H05 opdracht 5.1
+        </button>
+        <br>
+    </a>
+
+    </div>
 </section>
 </body>
 </html>
